--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,43 @@
+/* ubuntu fonts */
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
+/* inter fonts */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Ubuntu", sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.button-shadow {
+  box-shadow: 0px 4px 12px 0px #00000024;
+}
+
+.textGradient {
+  background: linear-gradient(258.44deg, #003366 23.89%, #0e80f2 82.67%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.featureBox {
+  box-shadow: 0px 8px 24px 0px #959da533;
+}
+
+:where(.css-dev-only-do-not-override-f7vrd6).ant-upload-wrapper
+  .ant-upload-drag,
+.dotDash {
+  border: 2px dashed #d0d5dd !important;
+  background: transparent !important;
+  border-radius: 1rem !important;
 }
