--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,9 @@
 /* inter fonts */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
+/* ones fonts */
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -46,13 +49,13 @@ body {
   box-shadow: 0px 4px 12px 0px #00000024;
 }
 
-.textGradient {
+/* .textGradient {
   background: linear-gradient(258.44deg, #003366 23.89%, #0e80f2 82.67%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-}
+} */
 
 .featureBox {
   box-shadow: 0px 8px 24px 0px #959da533;
@@ -99,4 +102,13 @@ body {
 
 .spaces > p, .spaces ol li{
   padding-bottom: 20px;
+}
+
+.glassmorphism-navbar {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); 
+  border-radius: 999999999px; 
+  padding: 10px 20px; 
+  /* box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);  */
 }
